--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>PRESP32</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  
+  img/presp32_hk.jpg
+ <img src="img/presp32_hk.jpg" alt="presp32">
+ 
 </body>
 </html>
