--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>PRESP32</h1>
 <p>I'm hosted with GitHub Pages.</p>
   
- <img src="./presp32/img/presp32_hk.jpg" alt="presp32">
+ <img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_psram.jpg" alt="presp32">
  
 </body>
 </html>
