--- a/index.html
+++ b/index.html
@@ -2,7 +2,36 @@
 <html>
 <body>
 <h1>PRESP32</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  
+ <p>Сетевой интерфейс **presp32** предназначен для расширения коммуникационных возможностей программируемых реле серии ПР200, ПР102, ПР100. 
+В зависимости от используемой [прошивки](https://github.com/pr200sd/presp32/wiki/3.1-%D0%92%D0%B5%D1%80%D1%81%D0%B8%D0%B8-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D0%B8%D1%8F) и [модификации плат](https://github.com/pr200sd/presp32/wiki/2.-%D0%9C%D0%BE%D0%B4%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D0%B8), доступны следующие сервисы и протоколы:</p>
+<ul>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.2-Modbus-TCP">modbus TCP</a></li>   
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.3-Modbus-RTU">Modbus RTU</a></li>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.4-Telegram-Bot">Telegram Bot</a></li>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.5-HomeKit">HomeKit</a></li>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.8-MQTT">MQTT</a></li>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.6-ds18b20">1-wire(ds18b20)</a></li>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.9-Logger">Logger</a></li>
+<li> <a href="https://github.com/pr200sd/presp32/wiki/4.7-Digital-IO">Digital-IO</a></li>
+</ul>
+ <br>
+ <p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.</p>
+<br>
+ <p>Вариант для установки в модификацию ПР200, подключение через WI-FI</p>
+<img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_psram.jpg" alt="presp32">
+<br>
+ <p>Вариант внешнего интерфейса, подключается через RS485, можно использовать совместно с модификациями ПР200, ПР102, ПР100, подключение через WI-FI</p>
+<img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_ext.jpg" alt="presp32">
+<br>
+ <p>Вариант в виде USB стика, можно использовать так же как внешний вариант, или как отладочный комплект при пусконаладочных работах на объекте, подключение через WI-FI</p>
+<img src="https://github.com/pr200sd/presp32/blob/main/img/pr_stick_tr.jpg" alt="presp32">
+<br>
+ <p>Версия с подключением по Ethernet</p>
+<img src="https://github.com/pr200sd/presp32/blob/main/img/pr_eth1.jpg" alt="presp32">
+
+  
+  
   
  <img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_psram.jpg" alt="presp32">
  
