--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>PRESP32</h1>
   
  <p>Сетевой интерфейс presp32 предназначен для расширения коммуникационных возможностей программируемых реле серии ПР200, ПР102, ПР100. 
-В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-%D0%92%D0%B5%D1%80%D1%81%D0%B8%D0%B8-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D0%B8%D1%8F">прошивки</a> и <a href="https://github.com/pr200sd/presp32/wiki/2.-%D0%9C%D0%BE%D0%B4%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D0%B8">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
+В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-%D0%92%D0%B5%D1%80%D1%81%D0%B8%D0%B8-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D0%B8%D1%8F">прошивки</a> и <a href="https://github.com/pr200sd/presp32/wiki/2.-Модификации-плат">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
 <ul>
 <li> <a href="https://github.com/pr200sd/presp32/wiki/4.2-Modbus-TCP">modbus TCP</a></li>   
 <li> <a href="https://github.com/pr200sd/presp32/wiki/4.3-Modbus-RTU">Modbus RTU</a></li>
