--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>PRESP32</h1>
   
  <p>Сетевой интерфейс presp32 предназначен для расширения коммуникационных возможностей программируемых реле серии ПР200, ПР102, ПР100. 
-В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-%D0%92%D0%B5%D1%80%D1%81%D0%B8%D0%B8-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%B5%D1%81%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D0%B8%D1%8F">прошивки</a> и <a href="https://github.com/pr200sd/presp32/wiki/2.-Модификации-плат">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
+В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-Версии-программного-обеспечения">прошивки</a> и <a href="https://github.com/pr200sd/presp32/wiki/2.-Модификации-плат">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
 <ul>
 <li> <a href="https://github.com/pr200sd/presp32/wiki/4.2-Modbus-TCP">modbus TCP</a></li>   
 <li> <a href="https://github.com/pr200sd/presp32/wiki/4.3-Modbus-RTU">Modbus RTU</a></li>
@@ -19,7 +19,7 @@
  <p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.</p>
 <br>
  <p>Вариант для установки в модификацию ПР200, подключение через WI-FI</p>
-<img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_psram.jpg" alt="presp32">
+<img src="img/presp32_psram.jpg" alt="presp32">
 <br>
  <p>Вариант внешнего интерфейса, подключается через RS485, можно использовать совместно с модификациями ПР200, ПР102, ПР100, подключение через WI-FI</p>
 <img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_ext.jpg" alt="presp32">
