--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <img src="img/presp32_psram.jpg" alt="presp32">
 <br>
  <p>Вариант внешнего интерфейса, подключается через RS485, можно использовать совместно с модификациями ПР200, ПР102, ПР100, подключение через WI-FI</p>
-<img src="https://github.com/pr200sd/presp32/blob/main/img/presp32_ext.jpg" alt="presp32">
+<img src="img/presp32_ext.jpg" alt="presp32">
 <br>
  <p>Вариант в виде USB стика, можно использовать так же как внешний вариант, или как отладочный комплект при пусконаладочных работах на объекте, подключение через WI-FI</p>
 <img src="https://github.com/pr200sd/presp32/blob/main/img/pr_stick_tr.jpg" alt="presp32">
