--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
  <p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.</p>
 <br>
  <p>Вариант для установки в модификацию ПР200, подключение через WI-FI</p>
-<img src="img/presp32_psram.jpg" alt="presp32">
+<img src="img/presp32_psram.jpg" width="800" height="600" alt="presp32">
 <br>
  <p>Вариант внешнего интерфейса, подключается через RS485, можно использовать совместно с модификациями ПР200, ПР102, ПР100, подключение через WI-FI</p>
-<img src="img/presp32_ext.jpg" alt="presp32">
+<img src="img/presp32_ext.jpg"  width="800" height="600" alt="presp32">
 <br>
  <p>Вариант в виде USB стика, можно использовать так же как внешний вариант, или как отладочный комплект при пусконаладочных работах на объекте, подключение через WI-FI</p>
 <img src="https://github.com/pr200sd/presp32/blob/main/img/pr_stick_tr.jpg" alt="presp32">
