--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <img src="img/presp32_ext.jpg"  width="800" height="600" alt="presp32">
 <br>
  <p>Вариант в виде USB стика, можно использовать так же как внешний вариант, или как отладочный комплект при пусконаладочных работах на объекте, подключение через WI-FI</p>
-<img src="https://github.com/pr200sd/presp32/blob/main/img/pr_stick_tr.jpg" alt="presp32">
+<img src="img/pr_stick_tr.jpg" width="800" height="600" alt="presp32">
 <br>
  <p>Версия с подключением по Ethernet</p>
-<img src="https://github.com/pr200sd/presp32/blob/main/img/pr_eth1.jpg" alt="presp32">
+<img src="img/pr_eth1.jpg" width="800" height="600" alt="presp32">
 
   
   
