--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 							</div>
 							<div class="col-8 col-12-narrow">
 								<div class="row">
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_psram.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_ext.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="pr_stick_tr.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="pr_eth1.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/pic05.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/pic06.jpg" alt="" /></a></div>
 								</div>
 							</div>
 						</div>
