--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 								<div class="row">
 									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_psram.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_ext.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="pr_stick_tr.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="pr_eth1.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/pr_stick_tr.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/pr_eth1.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="img/pic05.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="img/pic06.jpg" alt="" /></a></div>
 								</div>
