--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Tessellate by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Tessellate by HTML5 UP</title>
+		<title>PRESP32</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,11 +12,11 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1 style="color:red;">PRESP32</h1>
+					
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">Сетевой интерфейс WI-FI</a>
 				</footer>
 			</section>
 
@@ -29,8 +25,8 @@
 				<header>
 					<div class="container">
 						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<p>Сетевой интерфейс presp32 предназначен для расширения коммуникационных возможностей программируемых реле серии ПР200, ПР102, ПР100. 
+В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-Версии-программного-обеспечения">прошивки</a> и <a href="https://github.com/pr200sd/presp32/wiki/2.-Модификации-плат">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -115,9 +111,7 @@
 									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_psram.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_ext.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="img/pr_stick_tr.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="img/pr_eth1.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="img/pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="img/pic06.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="img/pr_eth1.jpg" alt="" /></a></div>									
 								</div>
 							</div>
 						</div>
@@ -378,15 +372,12 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCj4HeZMvSH5H3d_t6iDlQOQ" class="icon brands fa-youtube"><span class="label">Yuotube</span></a></li>					
+					<li><a href="https://github.com/pr200sd/presp32/wiki" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; pr200sd</li><li>Design: <a href="https://github.com/pr200sd/presp32/wiki">PRESP32/a></li>
 					</ul>
 				</div>
 			</section>
