--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
+						<h2>Назначение</h2>
 						<p>Сетевой интерфейс presp32 предназначен для расширения коммуникационных возможностей программируемых реле серии ПР200, ПР102, ПР100. 
 В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-Версии-программного-обеспечения">прошивки</a> и <a href="https://github.com/pr200sd/presp32/wiki/2.-Модификации-плат">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
 					</div>
@@ -36,12 +36,11 @@
 								<section>
 									<span class="feature-icon"><span class="icon fa-clock"></span></span>
 									<header>
-										<h3>Gravida</h3>
+										<h3>presp32</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.</p>
+									<p>Вариант для установки в модификацию ПР200, подключение через WI-FI</p>
+									<img src="img/presp32_psram.jpg" width="800" height="600" alt="presp32">
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
