--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									</header>
 									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.</p>
 									<p>Вариант для установки в модификацию ПР200, подключение через WI-FI</p>
-									<img src="img/presp32_psram.jpg" width="800" height="600" alt="presp32">
+									<img src="img/presp32_psram.jpg" alt="presp32">
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
