--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<header>
 										<h3>Telegram Bot</h3>
 									</header>									
-									<p>Поддержка чтения/записи регистров через Tekegram Bot</p>
+									<p>Поддержка чтения/записи регистров через Telegram Bot</p>
 								</section>
 							</div>
 							
@@ -85,7 +85,7 @@
 								<section>
 									<span class="feature-icon"><span class="icon fal fa-tools"></span></span>
 									<header>
-										<h3>настройка</h3>
+										<h3>Настройка</h3>
 									</header>
 									<p>Все настройки осуществляются через ыстроеннЫЙ WEB интерфейс.
 									настройки сохраняются в энергонезависимой памяти.
@@ -122,12 +122,13 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<h3>Различные модификации интерфейсных плат</h3>
+									<h3>Модификации интерфейсных плат</h3>
 									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.
 									Встариваемый вариант для установки в модификацию ПР200, поддержан режим Master и Slave.
 									Обмен данными через UART по протоколу Modbus RTU.
 									</p>
-									<p>Для подключения внешних датчиков 1-WIRE/I2C возможна установка 4 pin разъема. </p>									
+									<p>Для подключения внешних датчиков 1-WIRE/I2C возможна установка 4 pin разъема. </p>	
+									<div class="col-12"><a href="#" class="image fit"><img src="img/presp32_psram.jpg" alt="" /></a></div>
 								</section>
 							</div>
 							<div class="col-8 col-12-narrow">
