--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 							
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon fas fa-tools"></span></span>
+									<span class="feature-icon"><span class="icon fal fa-tools"></span></span>
 									<header>
 										<h3>Настройка</h3>
 									</header>
 									<p>Все настройки осуществляются через ыстроенный WEB интерфейс.
 									настройки сохраняются в энергонезависимой памяти.
 									Несколь
-									Обновление прошивки без физического доступа к плате
+									Обновление прошивки без физического доступа к плате через OTA.
 									</p>
 								</section>
 							</div>
@@ -122,7 +122,11 @@
 						<div class="row">
 							<div class="col-6 col-12-narrow">
 								<section>
-									<h3>Модификации интерфейсных плат</h3>
+									<h3>Модификации интерфейсных плат</h3>									
+								</section>
+							</div>
+							<div class="col-6 col-12-narrow">
+								<section>									
 									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.
 									Встариваемый вариант для установки в модификацию ПР200, поддержан режим Master и Slave.
 									Обмен данными через UART по протоколу Modbus RTU.
@@ -131,7 +135,7 @@
 									<div class="col-12"><a href="#" class="image fit"><img src="img/presp32_sd.jpg" alt="" /></a></div>
 								</section>
 							</div>
-							<div class="col-4 col-12-narrow">
+							<div class="col-6 col-12-narrow">
 								<section>
 									<h3>Модификации интерфейсных плат</h3>
 									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.
@@ -142,7 +146,7 @@
 									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_ext.jpg" alt="" /></a></div>
 								</section>
 							</div>
-							<div class="col-8 col-12-narrow">
+							<div class="col-6 col-12-narrow">
 								<section>
 									<h3>Модификации интерфейсных плат</h3>
 									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.
@@ -153,7 +157,7 @@
 									<div class="col-6"><a href="#" class="image fit"><img src="img/pr_stick_tr.jpg" alt="" /></a></div>
 								</section>
 							</div>
-							<div class="col-4 col-12-narrow">	
+							<div class="col-6 col-12-narrow">	
 								<section>
 									<h3>Модификации интерфейсных плат</h3>
 									<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.
