--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 							
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon fas fa-link"></span></span>
+									<span class="feature-icon"><span class="icon fa-link"></span></span>
 									<header>
-										<h3>Комуникация</h3>
+										<h3>Протоколы и интерфейсы</h3>
 									</header>
 									<p>Поддерживаются проводные и безпроводные протоколы для связи.
 									Для связи с программируемыми реле используется Modbus RTU.
