--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						В зависимости от используемой <a href="https://github.com/pr200sd/presp32/wiki/3.1-Версии-программного-обеспечения">прошивки</a> 
 						и <a href="https://github.com/pr200sd/presp32/wiki/2.-Модификации-плат">модификации плат</a>, доступны следующие сервисы и протоколы:</p>
 					</div>	
-													
+					<div class="content style1 dark">								
 					<ul class="default">
 						<li>Modbus TCP</li>
 						<li>Modbus RTU</li>
@@ -42,7 +42,7 @@
 						<li>Digital-IO</li>
 						<li>OTA</li>							 
 					</ul>			
-					
+					</div>
 				</header>
 				<div class="content dark style1 featured">
 					<div class="container">
