--- a/index.html
+++ b/index.html
@@ -146,8 +146,19 @@
 						<p>Существует несколько модификаций сетевых интерфейсов для подключения к программируемым реле.
 						Встариваемый вариант для установки в модификацию ПР200, поддержан режим Master и Slave.
 						Обмен данными через UART по протоколу Modbus RTU.
+						Для подключения внешних датчиков 1-WIRE/I2C возможна установка 4 pin разъема.
 						</p>
-						<p>Для подключения внешних датчиков 1-WIRE/I2C возможна установка 4 pin разъема. </p>	
+						<p>
+						Вариант внешнего интерфейса, подключается через RS485, 
+						можно использовать совместно с модификациями ПР200, ПР102, ПР100, подключение через WI-FI.
+						В случае использования внешних подключений по 1-wire/I2C рекомендуется использовать внешний вариант
+						платы, в этом случае осуществляется гальваническая развязка через сетевой интерфейс ПР.
+						</p>
+						<p>
+						Вариант в виде USB стика, можно использовать так же как внешний вариант, 
+						или как отладочный комплект при пусконаладочных работах на объекте, подключение через WI-FI.
+						</p>
+						Версия с подключением по Ethernet. Подходит если в месте установки связь с WI-FI неустойчивая.
 					</div>
 				</header>
 				<div class="content dark style2">
@@ -159,7 +170,13 @@
 								</section>
 							</div>
 							<div class="col-6 col-12-narrow">
-								<section>										
+								<section>
+						<p>
+						Вариант внешнего интерфейса, подключается через RS485, 
+						можно использовать совместно с модификациями ПР200, ПР102, ПР100, подключение через WI-FI.
+						В случае использования внешних подключений по 1-wire/I2C рекомендуется использовать внешний вариант
+						платы, в этом случае осуществляется гальваническая развязка через сетевой интерфейс ПР.
+						</p>								
 									<div class="col-6"><a href="#" class="image fit"><img src="img/presp32_ext.jpg" alt="" /></a></div>
 								</section>
 							</div>
