--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 				<ul class="icons">
 					<li><a href="https://www.youtube.com/channel/UCj4HeZMvSH5H3d_t6iDlQOQ" class="icon brands fa-youtube"><span class="label">Yuotube</span></a></li>					
 					<li><a href="https://github.com/pr200sd/presp32/wiki" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:pr200sd@gmail.com" class="icon solid fa-envelope-o"><span class="label">@mail</span></a></li>
+					<li><a href="mailto:pr200sd@gmail.com" class="icon solid fa-envelope"><span class="label">Mail</span></a></li>
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
